--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -134,9 +134,10 @@ est_date3 <- dmy(01042023)
               sel_fy == extract_fin_year(scot_date5) ~
               paste0(" ", 
               "**Please note:** ",
-              "*PHS have identified issues with the data submitted by NHS Tayside for 2023/24 ", 
-              "and 2024/25, which has resulted in some records showing as incorrectly having ", 
-              "met the standard. PHS are working with the Health Board to try and rectify ", 
+              "*PHS have identified issues with the data submitted by NHS Tayside (2023/24 ", 
+              "and 2024/25), NHS Highland (2024/25 Q3) and NHS Lanarkshire (2024/25 Q3), which ",
+              "has resulted in some records showing as incorrectly having ", 
+              "met the standard. PHS are working with the Health Boards to try and rectify ", 
               "this data issue in future submissions.*"), 
             TRUE ~ paste0(""))
   
@@ -161,7 +162,7 @@ est_date3 <- dmy(01042023)
       paste0(" ",
              "**Please note:** ",
              "*Due to local IT system issues West Dunbartonshire ",
-             "were not able to provide some records for 2024/25. ",
+             "have not been able to provide all records for 2024/25. ",
              "PHS has been informed that this issue will ",
              "be rectified in future submissions.*"), TRUE ~ paste0(""))
     
